# rust-sdk

./: Cargo.toml  rustfmt.toml
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: client.rs  handler.rs  lib.rs  service.rs
crates/mcp-client/src/transport/: child_process.rs  mod.rs  sse.rs  stdio.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: error.rs  handler.rs  lib.rs  prompt.rs  protocol.rs  resource.rs  schema.rs  service.rs  tool.rs  toolset.rs  transport.rs
crates/mcp-core/src/schema/: content.rs  prompt.rs  resource.rs  tool.rs
crates/mcp-core/src/service/: client.rs  server.rs
crates/mcp-core/src/transport/: io.rs  tokio_io.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: errors.rs  handler.rs  lib.rs  router.rs
crates/mcp-server/src/handler/: tool.rs
crates/rmcp/: Cargo.toml
crates/rmcp-macros/src/: lib.rs  tool2.rs
crates/rmcp/src/: lib.rs  model.rs  transport.rs
crates/rmcp/src/handler/: server.rs
crates/rmcp/src/handler/server/: router.rs  tool.rs
crates/rmcp/src/handler/server/router/: tool.rs
crates/rmcp/src/service/: client.rs  server.rs
crates/rmcp/src/transport/: common.rs  sse_server.rs  streamable_http.rs  streamable_http_client.rs  streamable_http_server.rs
crates/rmcp/src/transport/common/: http_header.rs  reqwest.rs
crates/rmcp/src/transport/common/reqwest/: streamable_http_client.rs
crates/rmcp/src/transport/streamable_http/: session.rs
crates/rmcp/src/transport/streamable_http_server/: axum.rs  session.rs  tower.rs
crates/rmcp/tests/: test_tool_macro_annotations.rs  test_tool_routers.rs
examples/clients/: Cargo.toml
examples/clients/src/: common.rs  stdio.rs  streamable_http.rs
examples/clients/src/common/: simple_client.rs
examples/servers/: Cargo.toml
examples/servers/src/: axum.rs  tokio_std_io.rs
examples/servers/src/common/: counter.rs
logs/: mcp-server.log.2025-03-12
