[package]
name = "mcp-client"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Client SDK for the Model Context Protocol"

[dependencies]
mcp-core = { workspace = true }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tower = { version = "0.4", features = ["timeout", "util"] }
tower-service = "0.3"
rand = "0.8"
pin-project-lite = "0.2"

reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
], optional = true  }
eventsource-client = { version = "0.12.0", optional = true }
[features]
default = ["sse"]
sse = ["dep:eventsource-client", "dep:reqwest"]

[dev-dependencies]
