[package]
name = "mcp-core"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Core types for Model Context Protocol"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
url = "2.5"
base64 = "0.21"
tower-service = "0.3"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
futures = "0.3"
tracing = { version = "0.1" }
tokio-util = { version = "0.7", features = ["io", "codec"] }
pin-project-lite = "0.2"

schemars = { version = "0.8", optional = true }

[features]

default = ["json_schema", "tokio_io"]
tokio_io = ["tokio/io-util"]
json_schema = ["dep:schemars"]

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt"] }
