[package]
name = "mcp-server-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mcp-server = { path = "../../crates/mcp-server" }
mcp-core = { path = "../../crates/mcp-core" }
mcp-macros = { path = "../../crates/mcp-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-appender = "0.2"
futures = "0.3"

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["io", "codec"] }
rand = { version = "0.8" }

[[example]]
name = "tokio_std_io"
path = "src/tokio_std_io.rs"

[[example]]
name = "axum"
path = "src/axum.rs"
